test_report.txt

> react-typescript-starter@0.1.0 test
> react-scripts test

Browserslist: caniuse-lite is outdated. Please run:
  npx browserslist@latest --update-db
  Why you should do it regularly: https://github.com/browserslist/browserslist#browsers-data-updating
FAIL src/App.test.tsx
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    /home/runner/work/spooky-mansion/spooky-mansion/node_modules/react-markdown/index.js:6
    export {uriTransformer} from './lib/uri-transformer.js'
    ^^^^^^

    SyntaxError: Unexpected token 'export'

       5 | import { Game, INITIAL_GAME, Room, SAVE_GAME_KEY } from "../maps/game";
       6 | import { getHere } from "./game_logic";
    >  7 | import ReactMarkdown from "react-markdown";
         | ^
       8 | import { AltTerminal } from "./AltTerminal";
       9 |
      10 | const SAVED_GAME = localStorage.getItem(SAVE_GAME_KEY);

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1728:14)
      at Object.<anonymous> (src/components/MainArea.tsx:7:1)

-------------------|---------|----------|---------|---------|-------------------
File               | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
-------------------|---------|----------|---------|---------|-------------------
All files          |       0 |        0 |       0 |       0 |                   
 src               |       0 |      100 |       0 |       0 |                   
  App.tsx          |       0 |      100 |       0 |       0 | 6                 
 src/components    |       0 |        0 |       0 |       0 |                   
  AltTerminal.tsx  |       0 |        0 |       0 |       0 | 7-71              
  Instructions.tsx |       0 |      100 |       0 |       0 | 3-21              
  MainArea.tsx     |       0 |        0 |       0 |       0 | 10-142            
  OldTerminal.tsx  |       0 |      100 |     100 |       0 | 75                
  Terminal.tsx     |       0 |        0 |       0 |       0 | 6-53              
  game_logic.ts    |       0 |        0 |       0 |       0 | 10-509            
 src/maps          |       0 |      100 |     100 |       0 |                   
  game.ts          |       0 |      100 |     100 |       0 | 1-26              
-------------------|---------|----------|---------|---------|-------------------
Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        3.32 s
Ran all test suites.
